# goblin-camp

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  vcpkg.json
Goblin Camp/: Readme.txt
Goblin Camp/crash-reporter/: goblin-camp-crash.csproj  goblin-camp-crash.sln
Goblin Camp/include/: Game.hpp  Map.hpp  stdafx.hpp
Goblin Camp/include/tileRenderer/ogl/: OGLTilesetRenderer.hpp
Goblin Camp/include/tileRenderer/sdl/: SDLTilesetRenderer.hpp
Goblin Camp/lib/: CMakeLists.txt
Goblin Camp/lib/gcamp_core/: __init__.py
Goblin Camp/src/: Attack.cpp  Camp.cpp  Construction.cpp  Entity.cpp  Faction.cpp  Game.cpp  Item.cpp  Job.cpp  JobManager.cpp  Map.cpp  NPC.cpp  NatureObject.cpp  Random.cpp  SpawningPool.cpp  Spell.cpp  Squad.cpp  Tile.cpp
Goblin Camp/src/UI/: DevConsole.cpp
Goblin Camp/src/scripting/: API.cpp  Engine.cpp
Goblin Camp/src/tileRenderer/: TileSetRenderer.cpp  TileSetTexture.cpp
Goblin Camp/src/tileRenderer/ogl/: OGLSprite.cpp  OGLTilesetRenderer.cpp
Goblin Camp/src/tileRenderer/sdl/: SDLTilesetRenderer.cpp
cmake/: Findlibtcod.cmake  README.md
game/: CHANGELOG  CMakeLists.txt  Readme.txt  common.rc_in  goblin-camp.rch
game/crash-reporter/: CrashForm.Designer.cs  CrashForm.cs  CrashForm.resx  Program.cs
game/crash-reporter/Properties/: AssemblyInfo.cs
game/include/: Announce.hpp  Color.hpp  Events.hpp  Faction.hpp  Game.hpp  Logger.hpp  Map.hpp  MapMarker.hpp  MapRenderer.hpp  NPC.hpp  StatusEffect.hpp  TCODMapRenderer.hpp  UI.hpp  stdafx.hpp
game/include/UI/: UIComponents.hpp
game/include/scripting/: Engine.hpp  _python.hpp
game/include/tileRenderer/: Sprite.hpp  TileSetRenderer.hpp
game/include/tileRenderer/ogl/: OGLFunctionExt.hpp  OGLTilesetRenderer.hpp
game/include/tileRenderer/sdl/: SDLTilesetRenderer.hpp
game/lib/: CMakeLists.txt  __gcdevconsole__.py
game/lib/gcamp_core/: __init__.py
game/src/: Attack.cpp  Camp.cpp  Construction.cpp  Container.cpp  Entity.cpp  Events.cpp  Faction.cpp  Farmplot.cpp  Fire.cpp  GCamp.cpp  Game.cpp  Item.cpp  Job.cpp  JobManager.cpp  Logger.cpp  Map.cpp  MapMarker.cpp  MapRenderer.cpp  NPC.cpp  NatureObject.cpp  Random.cpp  SpawningPool.cpp  Spell.cpp  Squad.cpp  StatusEffect.cpp  Stockpile.cpp  TCODMapRenderer.cpp  Tile.cpp  UI.cpp  Version.cpp
game/src/UI/: ConstructionDialog.cpp  DevConsole.cpp  Menu.cpp  SideBar.cpp  SquadsDialog.cpp  StockManagerDialog.cpp  Tooltip.cpp  UIComponents.cpp
game/src/data/: Config.cpp  Paths.cpp
game/src/platform/linux/: DataImpl.cpp
game/src/scripting/: API.cpp  Engine.cpp
game/src/tileRenderer/: TileSetLoader.cpp  TileSetRenderer.cpp  TileSetTexture.cpp
game/src/tileRenderer/ogl/: OGLResources.cpp  OGLSprite.cpp  OGLTilesetRenderer.cpp
game/src/tileRenderer/sdl/: SDLTilesetRenderer.cpp
